# netcup-dyndns-and-trusted-proxies-updater

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  updateDynDns.py
.github/workflows/: uv-pytest-and-ruff-check.yml
src/: updateDynDns.py
tests/: test_cached_ips.py  test_cli_args.py  test_color_formatter.py  test_create_settings_file_if_not_exists.py  test_do_not_create_if_settings_file_exists.py  test_format_update_summary.py  test_main.py  test_nginx_trusted_proxies_configuration.py  test_secret_overrides.py  test_settings_helpers.py  test_validate_settings.py
